[feat/#355] 월별 기록 조회 구현 완료